--- a/public/css/larger.scss
+++ b/public/css/larger.scss
@@ -26,9 +26,7 @@
       }
     
       main {
-        grid-template-rows: 10% 80% 10%;
         height: 100%;
-        margin-top: 30px;
       }
     
       nav{
